--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1273,7 +1273,7 @@ section.privacy-policy h3 {
 }
 section.privacy-policy ul {
   margin-bottom: 2rem;
-  background-color: #c7a585;
+  background-color: #f3d0b0;
   padding: 1rem;
   border-radius: 10px;
 }
