--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -1334,7 +1334,7 @@ section.privacy-policy{
   }
   ul{
     margin-bottom: 2rem;
-    background-color: #c7a585;
+    background-color: #f3d0b0;
     padding: 1rem;
     border-radius: 10px;
     li{
