--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -1363,6 +1363,11 @@ section.privacy-policy{
 
 //privacy-policy================
 
+*{
+  scrollbar-color: #6969dd #e0e0e0;
+  scrollbar-width: thin;
+}
+
 footer{
   background-color: #754F44;
   padding: .5rem;
