--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -2,6 +2,9 @@
   margin: 0;padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 @font-face {
   font-family: "GenEiLateMinN_v2";
   src: url("../fonts/GenEiLatin-Separate_v2.1/GenEiLateMinN_v2.ttf") format("truetype");
@@ -19,6 +22,7 @@ div#__next{
   border: .6rem #311b15 solid;
   box-sizing: content-box;
   background-color: rgb(253, 250, 220);
+  overflow: hidden;
 }
 
 
@@ -765,7 +769,12 @@ form{
     
   // }
   label.test-deadline,label.test-bonus{
-    display: inline;
+    display: inline-block;
+  }
+  #test-bonus{
+    display: inline-block;
+    width: 14em;
+    // margin: auto;
   }
   button{
     cursor: pointer;
@@ -844,6 +853,9 @@ div.isFlag{
 }
 
 div.usePoint{
+  #usePoint{
+    width: 14em;
+  }
   label{
     margin: 0;
     color: #4b281f;
@@ -1250,9 +1262,15 @@ section.about{
   }
 }
 
+strong{
+  word-wrap: break-word;
+  word-break: break-all;
 
+}
 
 .highlighter.brown{
+  word-wrap: break-word;
+  word-break: break-all;
   position: relative;
   display: inline-block;
   transform: translateX(-1em);
@@ -1261,6 +1279,7 @@ section.about{
   z-index: 1;
   // left: -1em;
   &::after{
+
     position: absolute;
     left: 0;bottom: 0;
     content: "";
@@ -1274,6 +1293,8 @@ section.about{
   }
 }
 .highlighter.blue{
+  word-wrap: break-word;
+  word-break: break-all;
   position: relative;
   display: inline-block;
   transform: translateX(-1em);
@@ -1282,6 +1303,7 @@ section.about{
   z-index: 1;
   // left: -1em;
   &::after{
+
     position: absolute;
     left: 0;bottom: 0;
     content: "";
@@ -1296,6 +1318,8 @@ section.about{
 }
 
 .highlighter.yellow{
+  word-wrap: break-word;
+  word-break: break-all;
   position: relative;
   display: inline-block;
   transform: translateX(-1em);
@@ -1304,6 +1328,7 @@ section.about{
   z-index: 1;
   // left: -1em;
   &::after{
+
     position: absolute;
     left: 0;bottom: 0;
     content: "";
@@ -1363,10 +1388,199 @@ section.privacy-policy{
 
 //privacy-policy================
 
-*{
-  scrollbar-color: #6969dd #e0e0e0;
-  scrollbar-width: thin;
+//rules======================
+
+.publishCorner,.predictCorner,.checkOutCorner{
+  a{
+    text-decoration: underline;
+    color: #2e2c0d;
+  }
+  color: #2e2c0d;
+  .title{
+    font-size: 18px;
+    padding: 1rem;
+    background-color:#eff5de ;
+    margin: 0;
+  }
+  margin: 1rem 0;
+  background-color: #d9e0c4;
+  padding: .5rem;
+  border-radius: 5px;
+  line-height: 1.5em;
+  p{
+    margin: 1rem 0 ;
+  }
+  img{
+    display: block;
+    margin:  auto;
+  }
+  .delete,.patch{
+    padding-top: .5rem;
+    border-top: #5E654A 2px dashed;
+  }
 }
+
+.rulesBody{
+  line-height: 1.5em;
+  .blockTitle{
+    &::before{
+      position: absolute;
+      content: "";
+      display: block;
+      height: 20px;width: 10px;
+      background-color: #4b281f;
+      transform: translateX(-15px);
+    }
+    margin-bottom: .5rem;
+    font-size: 18px;
+  }
+  .hint{
+    display: inline-block;
+    margin: .5rem 0;
+  }
+  color: #311b15;
+  padding: 1rem;
+
+  .profileCorner{
+    .title{
+      font-size: 18px;
+      padding: 1rem;
+      background-color:rgb(255, 240, 211) ;
+    }
+    margin: 1rem 0;
+    background-color: rgb(218, 206, 188);
+    padding: .5rem;
+    border-radius: 5px;
+    .aboutPoint,.aboutExp,.aboutPenalty{
+      border-bottom:#4b281f 2px dashed;
+      padding: 1rem;
+
+    }
+  }
+  h2{
+    // margin-bottom: 1rem;
+    display: flex;
+    position: relative;
+    margin: 1rem auto 2rem;
+    justify-content: center;
+    align-items: center;
+    
+    &::before,&::after{
+      content: "";
+      display: block;
+      background-color: #311b15;
+      height: 1.5em;width: 10px;
+      position: relative;
+    }
+    &::before{
+      transform: translateX(-10px);
+    }
+    &::after{
+      transform: translateX(10px);
+    }
+  }
+}
+
+//rules======================
+
+/* 滾動條的整體樣式 */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* 滾動條軌道 */
+::-webkit-scrollbar-track {
+  background-color: #cc9e91;
+}
+
+/* 滾動條滑塊 */
+::-webkit-scrollbar-thumb {
+  background-color: #882929;
+  border-radius: 5px;
+}
+
+/* Firefox 瀏覽器 */
+/* 滾動條的整體樣式 */
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #882929 #cc9e91;
+}
+
+/* 滾動條滑塊 */
+html::-webkit-scrollbar-thumb {
+  background-color: #882929;
+}
+
+/* 滾動條軌道 */
+html::-webkit-scrollbar-track {
+  background-color: #cc9e91;
+}
+
+/* Microsoft Edge 瀏覽器 */
+/* 滾動條的整體樣式 */
+@media screen and (min-width: 768px) {
+  ::-ms-scrollbar {
+    width: 5px;
+  }
+}
+
+/* 滾動條軌道 */
+@media screen and (min-width: 768px) {
+  ::-ms-scrollbar-track {
+    background-color: #cc9e91;
+  }
+}
+
+/* 滾動條滑塊 */
+@media screen and (min-width: 768px) {
+  ::-ms-scrollbar-thumb {
+    background-color: #882929;
+    border-radius: 5px;
+  }
+}
+
+div.loading{
+  width: 350px;
+
+  margin: auto;
+}
+#load {
+  display: flex;
+  justify-content: center;align-items: center;
+  margin:2rem auto;
+  width: 100px;
+  animation: loading 3s linear infinite;
+  #loading-inner {
+    stroke: {
+      dashoffset: 0;
+      dasharray: 300;
+      width: 10;
+      miterlimit: 10;
+      linecap: round;
+    }
+    animation: loading-circle 2s linear infinite;
+    stroke: #311b15;
+    fill: transparent;
+  }
+}
+
+@keyframes loading {
+  0% { 
+    transform: rotate(0); 
+  }
+  100% { 
+    transform: rotate(360deg);
+  }
+}
+@keyframes loading-circle {
+  0% { 
+    stroke-dashoffset: 0
+  }
+  100% { 
+    stroke-dashoffset: -600;
+  }
+}
+
 
 footer{
   background-color: #754F44;
