--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1341,10 +1341,6 @@ section.privacy-policy a {
 .publishCorner p, .predictCorner p, .checkOutCorner p {
   margin: 1rem 0;
 }
-.publishCorner img, .predictCorner img, .checkOutCorner img {
-  display: block;
-  margin: auto;
-}
 .publishCorner .delete, .publishCorner .patch, .predictCorner .delete, .predictCorner .patch, .checkOutCorner .delete, .checkOutCorner .patch {
   padding-top: 0.5rem;
   border-top: #5E654A 2px dashed;
@@ -1354,6 +1350,14 @@ section.privacy-policy a {
   line-height: 1.5em;
   color: #311b15;
   padding: 1rem;
+}
+.rulesBody a {
+  text-decoration: underline;
+  color: #2e2c0d;
+}
+.rulesBody img {
+  display: block;
+  margin: auto;
 }
 .rulesBody .blockTitle {
   margin-bottom: 0.5rem;
@@ -1409,6 +1413,11 @@ section.privacy-policy a {
   transform: translateX(10px);
 }
 
+.signUpAndLoginCorner img {
+  display: block;
+  margin: 1rem auto;
+}
+
 /* 滾動條的整體樣式 */
 ::-webkit-scrollbar {
   width: 5px;
@@ -1460,46 +1469,6 @@ html::-webkit-scrollbar-track {
   ::-ms-scrollbar-thumb {
     background-color: #882929;
     border-radius: 5px;
-  }
-}
-div.loading {
-  width: 350px;
-  margin: auto;
-}
-
-#load {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2rem auto;
-  width: 100px;
-  animation: loading 3s linear infinite;
-}
-#load #loading-inner {
-  stroke-dashoffset: 0;
-  stroke-dasharray: 300;
-  stroke-width: 10;
-  stroke-miterlimit: 10;
-  stroke-linecap: round;
-  animation: loading-circle 2s linear infinite;
-  stroke: #311b15;
-  fill: transparent;
-}
-
-@keyframes loading {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes loading-circle {
-  0% {
-    stroke-dashoffset: 0;
-  }
-  100% {
-    stroke-dashoffset: -600;
   }
 }
 .resourcePage {
