--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -928,7 +928,7 @@ form.CheckOutForm{
   }
 }
 
-.publishBtn{
+.publishBtn,.postNews{
   margin: 1rem;
   background-color: #aa706b;
   padding: .5rem;
@@ -1172,9 +1172,25 @@ form.contact{
     }
   }
 }
+.newsForm{
+  padding: 1rem;
+}
+
+.postNews{
+  display: block;
+  color: white;
+  margin: auto;
+  width: 10rem;
+  text-align: center;
+  &:hover{
+    color: #aa706b;
+  }
+}
 
 .newsBody{
-  
+  p.content{
+    white-space: pre-wrap;
+  }
   color: #311b15;
   padding: 1rem;
   .goBack{
