--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -220,6 +220,7 @@ a.allTests{
 }
 .testsByGenre{
   text-align: center;
+  line-height: 1.5em;
   li{
     color: #2e2c0d;
     padding-bottom: .3rem;
