--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -1034,6 +1034,7 @@ form.CheckOutForm{
   }
   .predictRecordsList{
     margin-bottom: 3rem;
+    line-height: 1.5em;
     li p.counter{
       text-align: right;
       font-size: 14px;
