--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -991,6 +991,7 @@ form.CheckOutForm {
 }
 .recordBody .predictRecordsList {
   margin-bottom: 3rem;
+  line-height: 1.5em;
 }
 .recordBody .predictRecordsList li p.counter {
   text-align: right;
